# hollywood

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  actor.hpp  channel.hpp
src/tests/: actor.cpp  channel.cpp
